<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_recycler_view"
                android:title="@string/navigation_drawer_recycler_view"/>
        <item
                android:id="@+id/nav_view_pager"
                android:title="@string/navigation_drawer_view_pager"/>
        <item
                android:id="@+id/nav_nested_scroll_view"
                android:title="@string/navigation_drawer_nested_scroll_view"/>
        <item
                android:id="@+id/nav_list_view"
                android:title="@string/navigation_drawer_list_view"/>
        <item
                android:id="@+id/nav_grid_view"
                android:title="@string/navigation_drawer_grid_view"/>
        <item
                android:id="@+id/nav_scroll_view"
                android:title="@string/navigation_drawer_scroll_view"/>
    </group>

</menu>
